add build config

--- a/src/Elastic_stack/Elasticsearch/Dockerfile
+++ b/src/Elastic_stack/Elasticsearch/Dockerfile
@@ -4,4 +4,5 @@ WORKDIR /root
 
 copy . /root/
 
-#RUN chmod +x /root/tools/build.sh  && ./tools/build.sh
+
+RUN chmod +x /root/tools/build.sh  && ./tools/build.sh
