second-node enrolled

--- a/src/elastic_stack/elasticsearch/Dockerfile
+++ b/src/elastic_stack/elasticsearch/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /srcs
 COPY ./configs ./configs
 COPY ./tools ./tools
 
-RUN chmod +x tools/build.sh  && sh tools/build.sh
+RUN chmod +x tools/build.sh  && bash tools/build.sh
 
 WORKDIR /home/elasticsearch
 
