--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,51 @@
-version: "3"
+version: "2.2"
 
 services:
   master-node:
+    build: ./src/elastic_stack/elasticsearch/.
+    image: elasticsearch37
+    volumes:
+      - certs:/home/elasticsearch/elasticsearch-8.3.1/config/certs
+      - master-node-data:/home/elasticsearch/elasticsearch-8.3.1/data
     ports:
       - 9200:9200
       - 9300:9300
-    build: ./src/elastic_stack/elasticsearch/.
     environment:
       - node.name=master-node
       - cluster.name=elkcluster
+      - cluster.initial_master_nodes=master-node,second-node
+      - discovery.seed_hosts=second-node
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-      - xpack.security.enabled=true
-      - xpack.security.http.ssl.enabled=true
-      - xpack.security.http.ssl.key=certs/master-node/master-node.key
-      - xpack.security.http.ssl.certificate=certs/master-node/master-node.crt
-      - xpack.security.http.ssl.certificate_authorities=certs/ca/ca.crt
-      - xpack.security.http.ssl.verification_mode=certificate
-      - xpack.security.transport.ssl.enabled=true
-      - xpack.security.transport.ssl.key=certs/master-node/master-node.key
-      - xpack.security.transport.ssl.certificate=certs/master-node/master-node.crt
-      - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
-      - xpack.security.transport.ssl.verification_mode=certificate
-
+    mem_limit: 1073741824
+    healthcheck:
+      test: ["CMD-SHELL", "[ -f config/certs/ca/ca.crt ]"]
+      interval: 50s
+      timeout: 50s
+      retries: 1200
+  second-node:
+    depends_on:
+      master-node:
+        condition: service_healthy
+    image: elasticsearch37
+    volumes:
+      - certs:/home/elasticsearch/elasticsearch-8.3.1/config/certs
+      - second-node-data:/home/elasticsearch/elasticsearch-8.3.1/data
+    environment:
+      - node.name=second-node
+      - cluster.name=elkcluster
+      - cluster.initial_master_nodes=master-node,second-node
+      - discovery.seed_hosts=master-node
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+    mem_limit: 1073741824
+    healthcheck:
+      test: ["CMD-SHELL", "[ -f config/certs/ca/ca.crt ] && curl -s --cacert config/certs/ca/ca.crt https://localhost:9200 | grep -q 'missing authentication credentials'"]
+      interval: 10s
+      timeout: 10s
+      retries: 120
+volumes:
+  certs:
+    driver: local
+  master-node-data:
+    driver: local
+  second-node-data:
+    driver: local
