--- a/src/elastic_stack/kibana/configs/kibana.yml
+++ b/src/elastic_stack/kibana/configs/kibana.yml
@@ -1,6 +1,7 @@
 server.host: "0.0.0.0"
+monitoring.kibana.collection.enabled: false
 elasticsearch.hosts: ["https://master-node:9200"]
 elasticsearch.username: "kibana_system"
-elasticsearch.password: ${KIBANA_PASSWORD}
+elasticsearch.password: "testing"
 elasticsearch.ssl.verificationMode: certificate
-elasticsearch.ssl.certificateAuthorities: [ "/home/elasticsearch/kibana-8.3.1/config/certs/ca/ca.crt" ]
+elasticsearch.ssl.certificateAuthorities: [ "/etc/kibana/config/certs/ca/ca.crt" ]
