error in docker

--- a/src/elastic_stack/elasticsearch/Dockerfile
+++ b/src/elastic_stack/elasticsearch/Dockerfile
@@ -1,8 +1,8 @@
 from debian:bullseye
 
 RUN groupadd -g 1000 elasticsearch
-RUN useradd --uid 1000 --gid 1000 -m elasticsearch
-
+RUN useradd --uid 1000 --gid 1000 -m -p '$6$1H4y54gyPJaV4/wz$UY0p3up84tHoKrX8i7ID.3RTM.W.yiVzGYlPEYUwUrAtz.D5IyZCrSvU2I1K87Ys4qwXFoTeV73TtxLTS9nUF0' elasticsearch
+RUN usermod -a -G sudo elasticsearch
 
 RUN mkdir srcs
 
