--- a/src/elastic_stack/elasticsearch/configs/elasticsearch.yml
+++ b/src/elastic_stack/elasticsearch/configs/elasticsearch.yml
@@ -17,3 +17,4 @@ xpack.security.transport.ssl.certificate_authorities: /home/elasticsearch/elasti
 xpack.security.transport.ssl.verification_mode: certificate
 
 xpack.monitoring.collection.enabled: true
+xpack.monitoring.elasticsearch.collection.enabled: false
