--- a/src/elastic_stack/kibana/configs/kibana-xpack.yml
+++ b/src/elastic_stack/kibana/configs/kibana-xpack.yml
@@ -5,5 +5,5 @@
   hosts: ["localhost:5601"]
   #basepath: ""
   username: "elastic"
-  password: "testing"
+  password: ${ELASTIC_PASSWORD}
   xpack.enabled: true
