--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
       - cluster.initial_master_nodes=master-node,second-node
       - discovery.seed_hosts=second-node
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-    mem_limit: 1073741824
+    mem_limit: 3073741824
     healthcheck:
-      test: ["CMD-SHELL", "[ -f config/certs/ca/ca.crt ]"]
+      test: ["CMD-SHELL", "[ -f /home/elasticsearch/elasticsearch-8.3.1/config/certs/ca/ca.crt ]"]
       interval: 50s
       timeout: 50s
       retries: 1200
@@ -36,9 +36,9 @@ services:
       - cluster.initial_master_nodes=master-node,second-node
       - discovery.seed_hosts=master-node
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-    mem_limit: 1073741824
+    mem_limit: 3073741824
     healthcheck:
-      test: ["CMD-SHELL", "[ -f config/certs/ca/ca.crt ] && curl -s --cacert config/certs/ca/ca.crt https://localhost:9200 | grep -q 'missing authentication credentials'"]
+      test: ["CMD-SHELL", "[ -f /home/elasticsearch/elasticsearch-8.3.1/config/certs/ca/ca.crt ] && curl -s --cacert /home/elasticsearch/elasticsearch-8.3.1/config/certs/ca/ca.crt https://master-node:9200 | grep -q 'missing authentication credentials'"]
       interval: 10s
       timeout: 10s
       retries: 120
@@ -56,7 +56,7 @@ services:
       - CA_PEM=/etc/kibana/config/certs/ca/ca.crt
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - KIBANA_PASSWORD=${KIBANA_PASSWORD}
-    mem_limit: 1073741824
+    mem_limit: 3073741824
 volumes:
   certs:
     driver: local
