--- a/src/elastic_stack/metricbeat/metricbeat.yml
+++ b/src/elastic_stack/metricbeat/metricbeat.yml
@@ -35,6 +35,13 @@ metricbeat.modules:
   hosts: ["http://kibana:5601"]
   username: "elastic"
   password: "testing"
+- module: logstash
+  metricsets: ["node", "node_stats"]
+  period: 10s
+  hosts: ["localhost:9600"]
+  username: "elastic"
+  password: "testing"
+  xpack.enabled: true
 
 setup.kibana:
     host: "kibana:5601"
