--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,24 @@ services:
       - certs:/root/config/certs
     depends_on:
       - kibana
+  elastic-agent:
+    image: docker.elastic.co/beats/elastic-agent:8.3.1
+    container_name: elastic-agent
+    volumes:
+      - certs:/root
+    user: root
+    environment:
+      - FLEET_SERVER_ELASTICSEARCH_CA=/root/ca/ca.crt
+      - FLEET_SERVER_ENABLE=true
+      - FLEET_SERVER_ELASTICSEARCH_HOST=https://master-node:9200
+      - FLEET_SERVER_ELASTICSEARCH_USERNAME=elastic
+      - FLEET_SERVER_ELASTICSEARCH_PASSWORD=testing
+      - KIBANA_FLEET_SETUP=1
+      - KIBANA_HOST=http://kibana:5601
+      - KIBANA_USERNAME=elastic
+      - KIBANA_PASSWORD=testing
+      - FLEET_SERVER_ELASTICSEARCH_INSECURE=true
+      - FLEET_SERVER_POLICY=fleet-server-policy
   metricbeat:
     build: ./src/elastic_stack/metricbeat/.
     image: metricbeat
@@ -80,6 +98,9 @@ services:
       interval: 10s
       timeout: 10s
       retries: 1200
+        #elastic-agent:
+        # build: .
+        # image: elastic-agent
 volumes:
   certs:
     driver: local
