--- a/src/elastic_stack/logstash/Dockerfile
+++ b/src/elastic_stack/logstash/Dockerfile
@@ -10,5 +10,6 @@ RUN /bin/bash build.sh
 
 COPY ./logstash.yml /root/logstash-8.3.1/config/.
 COPY ./logstash.conf /root/logstash-8.3.1/config/.
+COPY ./pipelines.yml /root/logstash-8.3.1/config/.
 
 ENTRYPOINT ["/bin/bash", "/root/entry.sh"]
