--- a/src/elastic_stack/elasticsearch/Dockerfile
+++ b/src/elastic_stack/elasticsearch/Dockerfile
@@ -1,7 +1,12 @@
 from debian:bullseye
 
+ARG ELASTIC_USER_HASH
+ENV ELASTIC_USER_HASH=$6$1H4y54gyPJaV4/wz$UY0p3up84tHoKrX8i7ID.3RTM.W.yiVzGYlPEYUwUrAtz.D5IyZCrSvU2I1K87Ys4qwXFoTeV73TtxLTS9nUF0
+
+RUN echo $ELASTIC_USER_HASH
+
 RUN groupadd -g 1000 elasticsearch
-RUN useradd --uid 1000 --gid 1000 -m -p '$6$1H4y54gyPJaV4/wz$UY0p3up84tHoKrX8i7ID.3RTM.W.yiVzGYlPEYUwUrAtz.D5IyZCrSvU2I1K87Ys4qwXFoTeV73TtxLTS9nUF0' elasticsearch
+RUN useradd --uid 1000 --gid 1000 -m -p $ELASTIC_USER_HASH elasticsearch
 RUN usermod -a -G sudo elasticsearch
 
 RUN mkdir srcs
