--- a/src/elastic_stack/kibana/configs/kibana.yml
+++ b/src/elastic_stack/kibana/configs/kibana.yml
@@ -2,7 +2,7 @@ server.host: "0.0.0.0"
 monitoring.kibana.collection.enabled: false
 elasticsearch.hosts: ["https://master-node:9200"]
 elasticsearch.username: "kibana_system"
-elasticsearch.password: "testing"
+elasticsearch.password: ${KIBANA_PASSWORD}
 elasticsearch.ssl.verificationMode: certificate
 elasticsearch.ssl.certificateAuthorities: [ "/etc/kibana/config/certs/ca/ca.crt" ]
 
