--- a/src/elastic_stack/logstash/Dockerfile
+++ b/src/elastic_stack/logstash/Dockerfile
@@ -1,15 +1,16 @@
 FROM debian:bullseye
-COPY . /root/.
+COPY ./tools/ /root/.
 
 USER root
+
 WORKDIR /root
+
 RUN mkdir -p /root/config/certs
-COPY archive.zip .
 
 RUN /bin/bash build.sh
 
-COPY ./logstash.yml /root/logstash-8.3.1/config/.
-COPY ./logstash.conf /root/logstash-8.3.1/config/.
-COPY ./pipelines.yml /root/logstash-8.3.1/config/.
+COPY ./configs/logstash.yml /root/logstash-8.3.1/config/.
+COPY ./configs/logstash.conf /root/logstash-8.3.1/config/.
+COPY ./configs/pipelines.yml /root/logstash-8.3.1/config/.
 
 ENTRYPOINT ["/bin/bash", "/root/entry.sh"]
