--- a/src/elastic_stack/logstash/configs/logstash.conf
+++ b/src/elastic_stack/logstash/configs/logstash.conf
@@ -23,7 +23,7 @@ output
             index => "games"
             document_type => "sold_games"
             user => "elastic"
-            password => "testing"
+            password => "${ELASTIC_PASSWORD}"
 
     }
 stdout {}
