--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - 9200:9200
       - 9300:9300
     environment:
+      - ELASTIC_USER_HASH=${ELASTIC_USER_HASH}
       - node.name=master-node
       - cluster.name=elkcluster
       - cluster.initial_master_nodes=master-node,second-node
@@ -33,6 +34,7 @@ services:
     ports:
       - 39200:9200
     environment:
+      - ELASTIC_USER_HASH=${ELASTIC_USER_HASH}
       - node.name=second-node
       - cluster.name=elkcluster
       - cluster.initial_master_nodes=master-node,second-node
@@ -55,13 +57,14 @@ services:
     ports:
       - 5601:5601
     environment:
-      - CA_PEM=/etc/kibana/config/certs/ca/ca.crt
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - KIBANA_PASSWORD=${KIBANA_PASSWORD}
     mem_limit: 3073741824
   logstash:
     build: ./src/elastic_stack/logstash/.
     image: logstash
+    environment:
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
     ports:
       - 9600:9600
     volumes:
@@ -79,13 +82,15 @@ services:
       - FLEET_SERVER_ENABLE=true
       - FLEET_SERVER_ELASTICSEARCH_HOST=https://master-node:9200
       - FLEET_SERVER_ELASTICSEARCH_USERNAME=elastic
-      - FLEET_SERVER_ELASTICSEARCH_PASSWORD=testing
+      - FLEET_SERVER_ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
       - KIBANA_FLEET_SETUP=1
       - KIBANA_HOST=http://kibana:5601
       - KIBANA_USERNAME=elastic
-      - KIBANA_PASSWORD=testing
+      - KIBANA_PASSWORD=${KIBANA_PASSWORD}
       - FLEET_SERVER_ELASTICSEARCH_INSECURE=true
       - FLEET_SERVER_POLICY=fleet-server-policy
+    depends_on:
+      - metricbeat
   metricbeat:
     build: ./src/elastic_stack/metricbeat/.
     image: metricbeat
@@ -93,14 +98,9 @@ services:
       - certs:/root/config/certs
     depends_on:
       - kibana
-    healthcheck:
-      test: ["CMD-SHELL", "curl -s -I http://kibana:5601 | grep -q '200 OK'"]
-      interval: 10s
-      timeout: 10s
-      retries: 1200
-        #elastic-agent:
-        # build: .
-        # image: elastic-agent
+    environment:
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - KIBANA_PASSWORD=${KIBANA_PASSWORD}
 volumes:
   certs:
     driver: local
