change from test passwrd to env

--- a/src/elastic_stack/logstash/configs/logstash.yml
+++ b/src/elastic_stack/logstash/configs/logstash.yml
@@ -3,7 +3,7 @@ http.port: 9600
 xpack.monitoring.enabled: true
 xpack.monitoring.elasticsearch.hosts: [ "https://master-node:9200" ]
 xpack.monitoring.elasticsearch.username: "elastic"
-xpack.monitoring.elasticsearch.password: "testing"
+xpack.monitoring.elasticsearch.password: "${ELASTIC_PASSWORD}"
 xpack.monitoring.elasticsearch.ssl.certificate_authority: /root/config/certs/ca/ca.crt
 xpack.monitoring.elasticsearch.ssl.verification_mode: none
   #pipeline.workers: 2
