--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,7 +86,7 @@ services:
       - KIBANA_FLEET_SETUP=1
       - KIBANA_HOST=http://kibana:5601
       - KIBANA_USERNAME=elastic
-      - KIBANA_PASSWORD=${KIBANA_PASSWORD}
+      - KIBANA_PASSWORD=${ELASTIC_PASSWORD}
       - FLEET_SERVER_ELASTICSEARCH_INSECURE=true
       - FLEET_SERVER_POLICY=fleet-server-policy
     depends_on:
